# first-katas

python/bowling-kata/: README.md  pyproject.toml
python/bowling-kata/bowling_kata/: Frame.py.example  Game.py.example  Roll.py.example  TenthFrame.py.example  game.py
python/bowling-kata/tests/: test_bowlinggame.py
